--- a/Runner/Runner.vcxproj
+++ b/Runner/Runner.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Oxygen.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Weather.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Blocks.h" />
@@ -99,6 +100,7 @@
     <ClInclude Include="LogicManager.h" />
     <ClInclude Include="Oxygen.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Weather.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
