--- a/Runner/Runner.vcxproj
+++ b/Runner/Runner.vcxproj
@@ -87,20 +87,22 @@
     <ClCompile Include="Blocks.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="IShape.cpp" />
-    <ClCompile Include="LogicManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Oxygen.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Weather.cpp" />
+    <ClCompile Include="Rain.cpp" />
+    <ClCompile Include="RelationsManager.cpp" />
+    <ClCompile Include="Wind.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Blocks.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="IShape.h" />
-    <ClInclude Include="LogicManager.h" />
     <ClInclude Include="Oxygen.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="Weather.h" />
+    <ClInclude Include="Rain.h" />
+    <ClInclude Include="RelationsManager.h" />
+    <ClInclude Include="Wind.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
