--- a/Runner/Runner.vcxproj.filters
+++ b/Runner/Runner.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Rain.cpp">
       <Filter>Header Files\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Coins.cpp">
+      <Filter>Header Files\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IShape.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Rain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Coins.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
