--- a/Runner/Runner.vcxproj
+++ b/Runner/Runner.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="IShape.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Obstacles.cpp" />
     <ClCompile Include="Oxygen.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rain.cpp" />
@@ -100,6 +101,7 @@
     <ClInclude Include="Coins.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="IShape.h" />
+    <ClInclude Include="Obstacles.h" />
     <ClInclude Include="Oxygen.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rain.h" />
