--- a/Runner/Runner.vcxproj.filters
+++ b/Runner/Runner.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="LogicUtilities.cpp">
       <Filter>Header Files\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>Header Files\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IShape.h">
@@ -85,6 +88,9 @@
     </ClInclude>
     <ClInclude Include="LogicUtilities.h">
       <Filter>Header Files\Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
